--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -1,13 +1,20 @@
 <!Doctype html>
 <html>
-<head>
-  <link href="">
-  <script src=""></script>
-  <title>Pizza Menu</title>
-</head>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Pizza Menu</title>
+  </head>
 
-<body>
+  <body>
+    <h1></h1>
+    <input type="checkbox"></input>
+    <ul><li></li></ul>
+    <ol><li></li></ol>
 
+    <button type="submit">Enter!</button>
 
-</body>
+  </body>
 </html>
