save html and JavaScript data

--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -9,12 +9,19 @@
   </head>
 
   <body>
-    <h1></h1>
-    <input type="checkbox"></input>
-    <ul><li></li></ul>
-    <ol><li></li></ol>
+    <div class="container">
+      <form id="events">
+        <h1>EpiPizza Menu</h1>
 
-    <button type="submit">Enter!</button>
+          <ol>
+            <li>Choose Your Size</li>
+              <input type="checkbox" name="large" value=$15.00>Large</input>
 
+              <li>Choose Your Sauce</li>
+          </ol>
+          
+        <button type="submit">Enter!</button>
+      </form>
+    </div>
   </body>
 </html>
