--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -10,18 +10,33 @@
 
   <body>
     <div class="container">
-      <form id="events">
-        <h1>EpiPizza Menu</h1>
-
-          <ol>
+      <h1>EpiPizza Menu</h1>
+        <ol>
+          <form id="form-size">
             <li>Choose Your Size</li>
-              <input type="checkbox" name="large" value=$15.00>Large</input>
+              <input type="checkbox" name="large" value=$15.00>Large: $15.00</input>
 
-              <li>Choose Your Sauce</li>
-          </ol>
-          
-        <button type="submit">Enter!</button>
-      </form>
+          </form>
+
+          <form id="form-sauce">
+            <li>Choose Your Sauce</li>
+              <input type="checkbox" name="Tomato" value=$0.00>Tomato Sauce</input>
+          </form>
+
+          <form id="form-sauce">
+            <li>Choose Your Toppings</li>
+              <input type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
+          </form>
+
+        </ol>
+
+        <button type="submit" class="btn btn-primary">Enter!</button>
+
+        <div>
+          <ul id="receipt"><br>
+          </ul>
+        </div>
+
     </div>
   </body>
 </html>
