--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -12,20 +12,20 @@
     <div class="container">
       <h1>EpiPizza Menu</h1>
         <ol>
-          <form id="form-size">
+          <form id="form-sz">
             <li>Choose Your Size</li>
-              <input type="checkbox" name="large" value=$15.00>Large: $15.00</input>
+              <input id="item1-sz" type="checkbox" name="large" value=$15.00>Large: $15.00</input>
 
           </form>
 
-          <form id="form-sauce">
+          <form id="form-sc">
             <li>Choose Your Sauce</li>
-              <input type="checkbox" name="Tomato" value=$0.00>Tomato Sauce</input>
+              <input id="item" type="checkbox" name="Tomato" value=$0.00>Tomato Sauce</input>
           </form>
 
-          <form id="form-sauce">
+          <form id="form-tps">
             <li>Choose Your Toppings</li>
-              <input type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
+              <input id="item" type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
           </form>
 
         </ol>
