save my failed experiments

--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -20,12 +20,12 @@
 
           <form id="form-sc">
             <li>Choose Your Sauce</li>
-              <input id="item" type="checkbox" name="Tomato" value=$0.00>Tomato Sauce</input>
+              <input id="item1-sc" type="checkbox" name="tomatoSauce" value=$0.00>Tomato Sauce</input>
           </form>
 
           <form id="form-tps">
             <li>Choose Your Toppings</li>
-              <input id="item" type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
+              <input id="item1-tps" type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
           </form>
 
         </ol>
