save JS experiments and html changes

--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -14,18 +14,18 @@
         <ol>
           <form id="form-sz">
             <li>Choose Your Size</li>
-              <input id="item1-sz" type="checkbox" name="large" value=$15.00>Large: $15.00</input>
+              <input id="item1-sz" name="large" type="radio" value="$15.00">Large: $15.00</input>
 
           </form>
 
           <form id="form-sc">
             <li>Choose Your Sauce</li>
-              <input id="item1-sc" type="checkbox" name="tomatoSauce" value=$0.00>Tomato Sauce</input>
+              <input id="item1-sc" name="tomatoSauce" type="radio" value="$0.00">Tomato Sauce</input>
           </form>
 
           <form id="form-tps">
             <li>Choose Your Toppings</li>
-              <input id="item1-tps" type="checkbox" name="Pepperoni" value=$0.50>Pepperoni: $0.50</input>
+              <input id="item1-tps" name="Pepperoni" type="checkbox" value="$0.50">Pepperoni: $0.50</input>
           </form>
 
         </ol>
@@ -34,6 +34,7 @@
 
         <div>
           <ul id="receipt"><br>
+
           </ul>
         </div>
 
