add more failed experiments in case they eventually end up working

--- a/Pizza-2/index.html
+++ b/Pizza-2/index.html
@@ -12,22 +12,17 @@
     <div class="container">
       <h1>EpiPizza Menu</h1>
         <ol>
-          <form id="form-sz">
+          <form id="formOne">
             <li>Choose Your Size</li>
               <input id="item1-sz" name="large" type="radio" value="$15.00">Large: $15.00</input>
 
-          </form>
-
-          <form id="form-sc">
             <li>Choose Your Sauce</li>
               <input id="item1-sc" name="tomatoSauce" type="radio" value="$0.00">Tomato Sauce</input>
-          </form>
 
-          <form id="form-tps">
             <li>Choose Your Toppings</li>
               <input id="item1-tps" name="Pepperoni" type="checkbox" value="$0.50">Pepperoni: $0.50</input>
-          </form>
 
+          </form>
         </ol>
 
         <button type="submit" class="btn btn-primary">Enter!</button>
